# Build example
add_executable(aufgabe_2_und_3

  aufgabe_2_und_3.cpp

  circle.cpp
  vec2.cpp
  )

# Build example
add_executable(aufgabe_6
circle.cpp
vec2.cpp
aufgabe_6.cpp
)

add_executable(aufgabe_7
circle.cpp
vec2.cpp
aufgabe_7.cpp
)

#add_executable(aufgabe_9
#aufgabe_9.cpp
#)

add_executable(aufgabe_11

circle.cpp
vec2.cpp
catch.hpp
aufgabe_11.cpp

)